<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1"
    android:paddingTop="?android:attr/actionBarSize"
    tools:context="com.indielink.indielink.ProfileFragment"
    android:id="@+id/carddetail">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/MusicianProfilePicture"
            android:layout_width="240dp"
            android:layout_height="240dp"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:layout_centerHorizontal="true"
            android:adjustViewBounds="true" />

        <TableLayout android:layout_width="wrap_content"
            android:id="@+id/BandVacancyTable"
            android:layout_height="wrap_content"
            android:stretchColumns="0,1,2"
            android:layout_below="@+id/MusicianProfilePicture">

            <TableRow>
                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Name"/>

                <TextView
                    android:id="@+id/Name"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"/>
            </TableRow>

            <TableRow>
                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Age"/>

                <TextView
                    android:id="@+id/Age"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"/>
            </TableRow>

            <TableRow>
                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Gender"/>

                <TextView
                    android:id="@+id/Gender"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"/>
            </TableRow>

            <TableRow>
                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Instrument"/>

                <TextView
                    android:id="@+id/Instrument"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"/>
            </TableRow>


            <TableRow>
                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/AboutMe"
                    android:layout_weight="2" />
            </TableRow>

            <TableRow>
                <TextView
                    android:id="@+id/AboutMe"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2" />
            </TableRow>
        </TableLayout>


        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/Recruit"
            android:id="@+id/RecruitButton"
            android:theme="@style/AppTheme.AppBarOverlay"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true" />

    </RelativeLayout>
</LinearLayout>