<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="?android:attr/actionBarSize"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.indielink.indielink.ProfileFragment">

    <ScrollView android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">
    <RelativeLayout
        android:id="@+id/UserRelativeLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/ProfilePicture"
            android:layout_width="240dp"
            android:layout_height="240dp"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:layout_centerHorizontal="true"
            android:adjustViewBounds="true" />

        <TableLayout android:id="@+id/ProfileList"
            android:layout_below="@id/ProfilePicture"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:stretchColumns="0,1,2,3,4,5">

            <TableRow android:layout_width="fill_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/Name"/>
                <TextView
                    android:id="@+id/UserName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>
            </TableRow>

            <TableRow android:layout_width="fill_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/Age"/>
                <TextView
                    android:id="@+id/UserAge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>
            </TableRow>

            <TableRow android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/Gender"/>
                <TextView
                    android:id="@+id/UserGender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>
            </TableRow>

            <TableRow android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/Instrument"/>
                <TextView
                    android:id="@+id/UserInstrument"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>
            </TableRow>

            <TableRow android:layout_width="fill_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/AboutMe"/>
            </TableRow>

            <TableRow android:layout_width="fill_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/ProfileAboutMe"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"/>
            </TableRow>
        </TableLayout>

        <Button
            android:id="@+id/EditProfile"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay"
            android:text="@string/EditProfile"
            android:layout_below="@id/ProfileList"/>
        </RelativeLayout>
    </ScrollView>
</LinearLayout>
